--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Open Weather API</title>
+    <link rel="stylesheet" href="weather.css">
   </head>
   <body>
+    <h1>Weather</h1>
     <button type="button" name="seattle" class="seattle" data-lat="47.6762" data-lon="-122.3182">Seattle</button>
     <button type="button" name="london" class="london" data-lat="51.5074" data-lon="0.1278">London</button>
     <script type="text/javascript" src="weather.js"></script>
+
+    <div class="">
+      <p>City: <span id='city'></span></p>
+    </div>
+
+    <div class="">
+      <p>Weather: <span id='weatherMain'></span></p>
+    </div>
+
+    <div class="">
+      <p>Temp: <span id='tempNow'></span></p>
+    </div>
+
+    <div class="">
+      <p>Wind: <span id='windSpeed'></span></p>
+    </div>
+
+
+    <p id='tempHigh'></p>
+    <p id='tempLow'></p>
+
+    <p id='windDirection'></p>
   </body>
 </html>
