show unit labels

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <p>Wind: <span id='windSpeed'></span></p>
     </div>
 
+    <div class="">
+      <p>Wind Degrees: <span id='windDegrees'></span></p>
+    </div>
 
-    <p id='tempHigh'></p>
-    <p id='tempLow'></p>
 
-    <p id='windDirection'></p>
   </body>
 </html>
