--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Open Weather API</title>
     <link rel="stylesheet" href="weather.css">
+
+    <!-- see https://websygen.github.io/owfont/  -->
   </head>
   <body>
     <h1>Weather</h1>
