--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Open Weather API</title>
-    <link rel="stylesheet" href="weather.css">
+    <link href="css/owfont-regular.css" rel="stylesheet" type="text/css">
+    <link href="css/weather.css" rel="stylesheet" href="/css/master.css">
+
 
     <!-- see https://websygen.github.io/owfont/  -->
   </head>
   <body>
     <h1>Weather</h1>
+    <i id="icon"></i>
 
     <button type="button" name="seattle" class="seattle" data-lat="47.6762" data-lon="-122.3182">Seattle</button>
     <button type="button" name="london" class="london" data-lat="51.5074" data-lon="0.1278">London</button>
