--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8">
     <title>Open Weather API</title>
     <link href="css/owfont-regular.css" rel="stylesheet" type="text/css">
-    <link href="css/weather.css" rel="stylesheet" href="/css/master.css">
+    <link href="css/weather.css" rel="stylesheet" type="text/css">
 
 
     <!-- see https://websygen.github.io/owfont/  -->
   </head>
   <body>
     <h1>Weather</h1>
+    <!-- owfont test
     <i id="icon"></i>
+    -->
+
+    <img id="icon2" src="#" alt="">
 
     <button type="button" name="seattle" class="seattle" data-lat="47.6762" data-lon="-122.3182">Seattle</button>
     <button type="button" name="london" class="london" data-lat="51.5074" data-lon="0.1278">London</button>
