Use images from open weather API

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <i id="icon"></i>
     -->
 
-    <img id="icon2" src="#" alt="">
+    <div id="iconDiv">
+
+    </div>
+
 
     <button type="button" name="seattle" class="seattle" data-lat="47.6762" data-lon="-122.3182">Seattle</button>
     <button type="button" name="london" class="london" data-lat="51.5074" data-lon="0.1278">London</button>
