about to remove metric code

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p id='weatherMain'></p>
       </div>
       <div class="flex2">
-        x
+          <p id='feelsLike'></p>
       </div>
       <div class="flex1">
         <p>Direction <span id='windDegrees'></span></p>
