simplified code, removed metric conversions

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <p id='weatherMain'></p>
       </div>
       <div class="flex2">
-          <p id='feelsLike'></p>
+          <p id='humidity'></p>
       </div>
       <div class="flex1">
-        <p>Direction <span id='windDegrees'></span></p>
+        <p><span id='windDegrees'></span></p>
       </div>
     </div>
 
@@ -52,20 +52,6 @@
     <button type="button" name="london" class="london" data-lat="51.5074" data-lon="0.1278">London</button>
     <button type="button" name="myLocation" class="myLocation">My Location</button>
     <script type="text/javascript" src="weather.js"></script>
-
-    <div>
-      <input id='imperial' type="radio" name="unit" value="imperial" checked=""> Imperial
-      <input id='metric' type="radio" name="unit" value="metric"> Metric
-    </div>
-
-
-
-
-
-
-    <div class="">
-
-    </div>
 
 
   </body>
