--- a/index.html
+++ b/index.html
@@ -16,42 +16,43 @@
     -->
 
     <div class="container">
-      <div id="iconDiv" class="flex1">
+      <div id="iconDiv" class="cell flex1">
 
       </div>
 
 
-      <div class="flex2">
-        <span id='tempNow' class="temp">
+      <div class="cell flex2">
+        <span id='tempNow' class="cell temp">
 
         </span>
         <span id='tempUnit'></span>
       </div>
 
 
-      <div class="flex1">
+      <div class="cell flex1">
         <p id='windSpeed'></p>
       </div>
     </div>
 
     <div class="container">
-      <div class="flex1">
+      <div class="cell flex1">
         <p id='weatherMain'></p>
       </div>
-      <div class="flex2">
+      <div class="cell flex2">
           <p id='humidity'></p>
       </div>
-      <div class="flex1">
+      <div id="degreeContainer" class="cell flex1">
         <p><span id='windDegrees'></span></p>
       </div>
     </div>
 
 
-
-    <button type="button" name="seattle" class="seattle" data-lat="47.6762" data-lon="-122.3182">Seattle</button>
-    <button type="button" name="london" class="london" data-lat="51.5074" data-lon="0.1278">London</button>
-    <button type="button" name="myLocation" class="myLocation">My Location</button>
-    <script type="text/javascript" src="weather.js"></script>
+    <div class="controls">
+      <button type="button" name="seattle" class="seattle" data-lat="47.6762" data-lon="-122.3182">Seattle</button>
+      <button type="button" name="london" class="london" data-lat="51.5074" data-lon="0.1278">London</button>
+      <button type="button" name="myLocation" class="myLocation">My Location</button>
+      <script type="text/javascript" src="weather.js"></script>
+    </div>
 
 
   </body>
