swap windspeed and winddirection

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     -->
 
     <div class="container">
-      <div id="iconDiv" class="cell flex1">
-
-      </div>
-
+      <div id="iconDiv" class="cell flex1"></div>
 
       <div class="cell flex2">
         <span id='tempNow' class="cell temp">
@@ -28,9 +25,8 @@
         <span id='tempUnit'></span>
       </div>
 
-
-      <div class="cell flex1">
-        <p id='windSpeed'></p>
+      <div id="degreeContainer" class="cell flex1">
+        <p><span id='windDegrees'></span></p>
       </div>
     </div>
 
@@ -41,9 +37,10 @@
       <div class="cell flex2">
           <p id='humidity'></p>
       </div>
-      <div id="degreeContainer" class="cell flex1">
-        <p><span id='windDegrees'></span></p>
+      <div class="cell flex1">
+        <p id='windSpeed'></p>
       </div>
+
     </div>
 
 
