adds time adjustment to handle sunrise/sunset times outside of our timezone

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <div id="degreeContainer" class="cell flex1">
         <p><span id='windDegrees'></span></p>
       </div>
+
+      <div class="cell flex2">
+        <p id='sunrise'></p>
+
+      </div>
     </div>
 
     <div class="container">
@@ -36,13 +41,16 @@
       <div class="cell flex1">
         <p id='windSpeed'></p>
       </div>
+      <div class="cell flex2">
+        <p id='sunset'></p>
+      </div>
 
     </div>
 
 
     <div class="controls">
-      <button type="button" name="seattle" class="seattle" data-lat="47.6762" data-lon="-122.3182">Seattle</button>
-      <button type="button" name="london" class="london" data-lat="51.5074" data-lon="0.1278">London</button>
+      <button type="button" name="seattle" class="seattle" data-lat="47.6762" data-lon="-122.3182" data-timeOffset="-7">Seattle</button>
+      <button type="button" name="london" class="london" data-lat="51.5074" data-lon="0.1278" data-timeOffset="1">London</button>
       <button type="button" name="myLocation" class="myLocation">My Location</button>
       <script type="text/javascript" src="weather.js"></script>
     </div>
