Adds sunrise and sunset icons

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         <p><span id='windDegrees'></span></p>
       </div>
 
-      <div class="cell flex2">
-        <p id='sunrise'></p>
-
+      <div id="sunriseContainer" class="cell flex2">
       </div>
     </div>
 
@@ -41,8 +39,7 @@
       <div class="cell flex1">
         <p id='windSpeed'></p>
       </div>
-      <div class="cell flex2">
-        <p id='sunset'></p>
+      <div id="sunsetContainer" class="cell flex2">
       </div>
 
     </div>
